First structure setup

--- a/tex/kapitel/kapitel_2_grundlagen.tex
+++ b/tex/kapitel/kapitel_2_grundlagen.tex
@@ -1,5 +1,7 @@
 \chapter{Grundlagen}
 
+\section{Aufbau des Laufroboters}
+
 \section{Robotik}
 
 \subsection{Koordinatensysteme}
@@ -7,7 +9,7 @@
 \subsection{Inverse Kinematik}
 \subsection{Laufplanung}
 
-\section{Aufbau des sechsbeinigen Laufroboters Akrobat}
+statische Laufalgorithmen, reaktive, planende Laufalgorithmen like RandomSampling
 
 \section{Frameworks}
 
