--- a/tex/kapitel/kapitel_3_konzept.tex
+++ b/tex/kapitel/kapitel_3_konzept.tex
@@ -1,11 +1,7 @@
-\chapter{Konzeption der Laufplanung}
+\chapter{Funktionsweise des Random Samplings}
 
-\section{Planende Verfahren}
+\section{Erzeugen gültiger Lösungen}
 
-\subsection{Random Sampling}
+\section{Bewertung gültiger Lösungen}
 
-\section{Statische Verfahren}
-
-\subsection{Tripod Gait}
-\subsection{Wave Gait}
-\subsection{Ripple Gait}
+\section{Heuristiken zur Bewertung des Algorithmus}
