--- a/tex/kapitel/abkuerzungen.tex
+++ b/tex/kapitel/abkuerzungen.tex
@@ -1,6 +1,6 @@
 % Die längste Abkürzung kann in die eckigen Klammern
 % bei \begin{acronym} geschrieben, um einen hässlichen
 % Umbruch zu verhindern
-\begin{acronym}[TEST]
-\acro{TEST}{Test test}
+\begin{acronym}[ROS]
+\acro{ROS}{Robot Operating System}
 \end{acronym}
