--- a/tex/kapitel/kapitel_4_implementierung.tex
+++ b/tex/kapitel/kapitel_4_implementierung.tex
@@ -6,6 +6,10 @@ Herms, Ruffler, und AKrobat GitHub (gibt es dazu eine Arbeit?)
 
 \section{Allgemeiner Aufbau des Pakets}
 
+Die zuvor genannten Pakete müssen nun in das \ac{ROS} portiert werden. Ferner muss der Algorithmus zur Laufplanung mittels Random Sampling extrahiert und mit \ac{ROS} kompatibel gemacht werden. Dabei gibt es einige Herausforderungen, die gelöst werden müssen:
+
+
+
 Ordnerstruktur oder vllt in Baustein, Laufzeit und Verteilungssicht?
 
 \section{Aufsetzen der Simulation}
