--- a/tex/kapitel/kapitel_5_test.tex
+++ b/tex/kapitel/kapitel_5_test.tex
@@ -1,1 +1,7 @@
 \chapter{Testen der Ergebnisse}
+
+\section{Testen der Fußsteuerung}
+
+- mit Hilfe von Tripod Gait
+- Setup Tripod Gait
+- 4 Screenshots wo man ein paar Bewegungen sieht
